@@ -2100,5 +2100,65 @@ allTests(const Ice::CommunicatorPtr& communicator)
     }
     cout << "ok" << endl;
 
+    cout << "testing close connection with sending queue... " << flush;
+    {
+        Ice::ByteSeq seq;
+        seq.resize(1024 * 10); // Make sure the request doesn't compress too well.
+        for(Ice::ByteSeq::iterator q = seq.begin(); q != seq.end(); ++q)
+        {
+            *q = static_cast<Ice::Byte>(IceUtilInternal::random(255));
+        }
+
+        //
+        // Send multiple opWithPayload, followed by a close and followed by multiple opWithPaylod.
+        // The goal is to make sure that none of the opWithPayload fail even if the server closes 
+        // the connection gracefully in between.
+        // 
+        int maxQueue = 2;
+        bool done = false;
+        while(!done && maxQueue < 50)
+        {
+            done = true;
+            p->ice_ping();
+            vector<Ice::AsyncResultPtr> results;
+            for(int i = 0; i < maxQueue; ++i)
+            {
+                results.push_back(p->begin_opWithPayload(seq));
+            }
+            if(!p->begin_close(false)->isSent())
+            {
+                for(int i = 0; i < maxQueue; i++)
+                {
+                    Ice::AsyncResultPtr r = p->begin_opWithPayload(seq);
+                    results.push_back(r);
+                    if(r->isSent())
+                    {
+                        done = false;
+                        maxQueue *= 2;
+                        break;
+                    }
+                }
+            }
+            else 
+            {
+                maxQueue *= 2;
+                done = false;
+            }
+            for(vector<Ice::AsyncResultPtr>::const_iterator p = results.begin(); p != results.end(); ++p)
+            {
+                (*p)->waitForCompleted();
+                try
+                {
+                    (*p)->throwLocalException();
+                }
+                catch(const Ice::LocalException&)
+                {
+                    test(false);
+                }
+            }
+        }
+    }
+    cout << "ok" << endl;
+
     p->shutdown();
 }
