@@ -29,6 +29,7 @@ interface TestIntf
     void opBatch();
     int opBatchCount();
     bool waitForBatch(int count);
+    void close(bool force);
     void shutdown();
 };
 
